--- a/gui-app.cabal
+++ b/gui-app.cabal
@@ -20,7 +20,8 @@ executable gui-app
   main-is:             Main.hs
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.13 && <4.14
+  -- build-depends:       base >=4.13 && <4.14
+  build-depends:       base
                      , gtk3
   -- hs-source-dirs:
   default-language:    Haskell2010
